@@ -54,7 +54,6 @@
             OUTLETS = {
                 "AI_CODE" = id; 
                 "AI_ON" = id; 
-                "AI_PANEL" = id; 
                 "CONFIG_ANTIALIAS" = id; 
                 "CONFIG_BACKGROUND" = id; 
                 "CONFIG_COL" = id; 
@@ -68,12 +67,7 @@
                 "CONFIG_SELECTION" = id; 
                 "CONFIG_TRANS2" = id; 
                 "CONFIG_TRANSPARENCY" = id; 
-                "OA_ON" = id; 
-                SCROLLVIEW = id; 
-                TABVIEW = id; 
-                "WA_ON" = id; 
                 WINDOW = id; 
-                newwinItem = id; 
             }; 
             SUPERCLASS = NSWindowController; 
         }
